syntax = "proto3";
package client;
option go_package = "./example/threshold/client";

service Certification {
    rpc GetCertificate(CSR) returns (Certificate) {}
}

message CSR {
    uint32 ClientID = 1;
    uint64 SequenceNumber = 2;
    bytes CSR = 3;
}

message Certificate {
    bytes Certificate = 1;
}

message Batch { repeated CSR CSRs = 1; }